fix header's z-index

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -12,6 +12,7 @@
   background-color: $white
   color: $black
   border-radius: 0 0 10px 10px
+  z-index: 10
 
   @include md
     font-size: 0.8em
