--- a/src/components/LoginPopup/LoginPopup.sass
+++ b/src/components/LoginPopup/LoginPopup.sass
@@ -8,7 +8,7 @@
   opacity: 0
   width: 100%
   margin: 0 auto
-  z-index: 5
+  z-index: 15
   visibility: hidden
   display: flex
   justify-content: center
